chore: update license to MIT with Commons Clause
Protects against commercial hosted service competition while
maintaining full freedom for local use, self-hosting, and
internal enterprise use.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "developer-tools"
   ],
   "author": "WorldFlow AI",
-  "license": "MIT",
+  "license": "MIT WITH Commons-Clause",
   "repository": {
     "type": "git",
     "url": "https://github.com/WorldFlowAI/synapse-memory.git"
